fix-bag scrollbar

--- a/static/main_page/style.css
+++ b/static/main_page/style.css
@@ -13,10 +13,11 @@ body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
     background-color: white;
+    overflow: overlay;
 }
 
 ::-webkit-scrollbar {
-    width: 16px;
+    width: 8px;
     /*border-radius: 10px;*/
 }
 
@@ -26,8 +27,8 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #0f0900;
-    /*border-radius: 100px;*/
+    background-color: rgba(0,0,0,0.5);
+    /* border-radius: 100px; */
 }
 
 .colider {
