--- a/static/style.css
+++ b/static/style.css
@@ -11,10 +11,11 @@ body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
     background-color: white;
+    overflow: overlay;
 }
 
 ::-webkit-scrollbar {
-    width: 16px;
+    width: 8px;
     /*border-radius: 10px;*/
 }
 
@@ -24,6 +25,6 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #0f0900;
+    background-color: rgba(0,0,0,0.5);
     /*border-radius: 100px;*/
 }
